--- a/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
+++ b/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="investment"
-            type="com.tarrakki.module.portfolio.PortfolioFund" />
+            type="com.tarrakki.api.model.UserPortfolioResponse.Data.GoalBasedInvestment.Fund" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -24,7 +24,7 @@
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/lato_semibold"
             android:maxLines="2"
-            android:text="@{investment.name}"
+            android:text="@{investment.fundName}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/item_selected_color"
             app:layout_constraintEnd_toEndOf="parent"
@@ -32,18 +32,50 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Home Goal" />
 
+        <android.support.v7.widget.LinearLayoutCompat
+            android:id="@+id/ll_folio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="@dimen/space_8"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvName">
+
+            <TextView
+                android:id="@+id/tvFolioNoL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/folio_no"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+
+            <TextView
+                android:id="@+id/tvFolioNo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_semibold"
+                android:text="@{investment.folioNoList}"
+                android:maxLines="2"
+                android:paddingStart="@dimen/space_4"
+                android:ellipsize="end"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/semi_black"
+                tools:text="@string/dummy3" />
+        </android.support.v7.widget.LinearLayoutCompat>
+
         <TextView
             android:id="@+id/tvLastPriceL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_space"
             android:layout_marginEnd="8dp"
             android:text="@string/total_investment_"
+            android:layout_marginTop="@dimen/space_8"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintEnd_toStartOf="@+id/gdlCenter"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvName" />
+            app:layout_constraintTop_toBottomOf="@id/ll_folio" />
 
         <TextView
             android:id="@+id/tvLastPrice"
@@ -61,14 +93,13 @@
             android:id="@+id/tvDayChangeL"
             android:layout_width="wrap_content"
             android:layout_height="14dp"
-            android:layout_marginTop="@dimen/default_space"
             android:layout_marginEnd="8dp"
             android:text="@string/current_value_"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintEnd_toStartOf="@+id/tvFolioNoL"
+            app:layout_constraintEnd_toStartOf="@+id/tvXIRRNo"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/gdlCenter"
-            app:layout_constraintTop_toBottomOf="@id/tvName" />
+            app:layout_constraintTop_toTopOf="@+id/tvLastPriceL" />
 
         <TextView
             android:id="@+id/tvDayChange"
@@ -83,20 +114,19 @@
             tools:text="@string/dummy3" />
 
         <TextView
-            android:layout_marginStart="8dp"
-            android:id="@+id/tvFolioNoL"
+            android:id="@+id/tvXIRRL"
             android:layout_width="wrap_content"
             android:layout_height="14dp"
-            android:layout_marginTop="@dimen/default_space"
-            android:text="@string/folio_no"
+            android:layout_marginStart="8dp"
+            android:text="@string/xirr_"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/gdlEnd"
-            app:layout_constraintTop_toBottomOf="@id/tvName" />
+            app:layout_constraintTop_toTopOf="@+id/tvDayChangeL" />
 
         <TextView
-            android:id="@+id/tvFolioNo"
+            android:id="@+id/tvXIRRNo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_semibold"
@@ -104,9 +134,9 @@
             android:textColor="@color/semi_black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@id/tvFolioNoL"
-            app:layout_constraintTop_toBottomOf="@+id/tvFolioNoL"
-            app:price="@{investment.currentValue}"
+            app:layout_constraintStart_toStartOf="@id/tvXIRRL"
+            app:layout_constraintTop_toBottomOf="@+id/tvXIRRL"
+            android:text="@{investment.xirr + `%`}"
             tools:text="@string/dummy3" />
 
         <android.support.constraint.Guideline
@@ -124,7 +154,7 @@
             app:layout_constraintGuide_percent="0.80" />
 
         <LinearLayout
-            android:layout_marginTop="@dimen/space_16"
+            android:layout_marginTop="@dimen/space_8"
             app:layout_constraintTop_toBottomOf="@+id/tvLastPrice"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
