--- a/app/src/main/res/layout/row_goal_based_investment_list_item.xml
+++ b/app/src/main/res/layout/row_goal_based_investment_list_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="investment"
-            type="com.tarrakki.module.portfolio.Investment" />
+            type="com.tarrakki.api.model.UserPortfolioResponse.Data.GoalBasedInvestment" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -15,8 +15,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/shape_cart_view"
         android:elevation="@dimen/space_2"
-        android:padding="@dimen/space_8"
-        tools:layout_marginBottom="@dimen/space_16">
+        android:padding="@dimen/space_8">
 
         <TextView
             android:id="@+id/tvName"
@@ -26,7 +25,7 @@
             android:fontFamily="@font/lato_semibold"
             android:maxLines="1"
             android:minLines="1"
-            android:text="@{investment.name}"
+            android:text="@{investment.goalName}"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/item_selected_color"
@@ -101,7 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_semibold"
-            android:text="@{investment.XIRR + `%`}"
+            android:text="@{investment.xirr + `%`}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/semi_black"
             app:layout_constraintStart_toStartOf="@id/tvYDRLabel"
