--- a/app/src/main/res/layout/fragment_failed_transaction.xml
+++ b/app/src/main/res/layout/fragment_failed_transaction.xml
@@ -4,16 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvTransactions"
+        android:id="@+id/rvFailedTransactions"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
         android:overScrollMode="never"
         android:paddingTop="@dimen/default_space"
-        android:clipToPadding="false"
         app:dividerV="@{@drawable/shape_transferant_divider_16dp}"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        tools:context=".module.transactions.TransactionDetailsFragment"
-        tools:listitem="@layout/row_transaction_list_item" />
+        tools:context=".module.transactions.childfragments.FailedTransactionFragment" />
 
 </layout>
 
