--- a/app/src/main/res/layout/row_failed_transactions.xml
+++ b/app/src/main/res/layout/row_failed_transactions.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/space_16"
         android:layout_marginEnd="@dimen/space_16"
-        android:background="@drawable/shape_cart_view"
+        android:background="@{data.selected ? @drawable/shape_cart_view_selected : @drawable/shape_cart_view}"
         android:elevation="@dimen/space_2"
         android:padding="@dimen/space_8"
         tools:background="@drawable/shape_cart_view">
@@ -70,8 +70,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_16"
             android:text="@string/type_"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/black"
-            android:textSize="@dimen/_9ssp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvName" />
 
@@ -82,7 +82,7 @@
             android:layout_marginStart="@dimen/space_4"
             android:layout_marginTop="@dimen/space_16"
             android:text="@{data.type}"
-            android:textSize="@dimen/_9ssp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toEndOf="@id/tvTypeL"
             app:layout_constraintTop_toBottomOf="@id/tvName"
             tools:text="Lumpsum" />
@@ -92,7 +92,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.35" />
+            app:layout_constraintGuide_percent="0.4" />
 
         <TextView
             android:id="@+id/tvNAVL"
@@ -100,22 +100,19 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_16"
             android:text="@string/nav_"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/black"
-            android:textSize="@dimen/_9ssp"
             app:layout_constraintStart_toEndOf="@id/gdlCenter"
             app:layout_constraintTop_toBottomOf="@id/tvName" />
 
         <TextView
             android:id="@+id/tvNAV"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_4"
             android:layout_marginTop="@dimen/space_16"
-            android:layout_marginEnd="@dimen/space_4"
-            android:maxLines="2"
-            android:textSize="@dimen/_9ssp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:dprice="@{data.nav}"
-            app:layout_constraintEnd_toStartOf="@id/gdlEnd"
             app:layout_constraintStart_toEndOf="@id/tvNAVL"
             app:layout_constraintTop_toBottomOf="@id/tvName"
             tools:text="27.50" />
@@ -133,8 +130,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_16"
             android:text="@string/folio_no_"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/black"
-            android:textSize="@dimen/_9ssp"
             app:layout_constraintEnd_toStartOf="@id/tvFolioNo"
             app:layout_constraintStart_toEndOf="@id/gdlEnd"
             app:layout_constraintTop_toBottomOf="@id/tvName" />
@@ -145,91 +142,52 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_4"
             android:layout_marginTop="@dimen/space_16"
-            android:maxLines="2"
+            android:gravity="end"
             android:text="@{data.folioNumber}"
-            android:textSize="@dimen/_9ssp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tvFolioL"
             app:layout_constraintTop_toBottomOf="@id/tvName"
             tools:text="15874" />
 
-
-        <TextView
-            android:id="@+id/tvOrderNoL"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <View
+            android:id="@+id/mDivider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
             android:layout_marginTop="@dimen/space_16"
-            android:text="@string/order_no_"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_9ssp"
+            android:background="@color/lighter_gray"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvTypeL" />
 
         <TextView
-            android:id="@+id/tvOrderNo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_4"
-            android:layout_marginTop="@dimen/space_16"
-            android:layout_marginEnd="@dimen/space_4"
-            android:maxLines="2"
-            android:text="@{data.orderNumber}"
-            android:textSize="@dimen/_9ssp"
-            app:layout_constraintEnd_toStartOf="@id/gdlCenter"
-            app:layout_constraintStart_toEndOf="@+id/tvOrderNoL"
-            app:layout_constraintTop_toBottomOf="@id/tvTypeL"
-            tools:text="#15874" />
-
-        <TextView
-            android:id="@+id/tvOrderTypeL"
+            android:id="@+id/tvRemarkL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_16"
-            android:text="@string/order_type_"
+            android:layout_marginTop="@dimen/space_8"
+            android:layout_marginBottom="@dimen/space_16"
+            android:text="@string/remarks_"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/black"
-            android:textSize="@dimen/_9ssp"
-            app:layout_constraintStart_toEndOf="@id/gdlCenter"
-            app:layout_constraintTop_toBottomOf="@id/tvNAVL" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/mDivider" />
 
         <TextView
-            android:id="@+id/tvOrderType"
+            android:id="@+id/tvRemark"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_4"
-            android:layout_marginTop="@dimen/space_16"
-            android:maxLines="2"
-            android:text="@{data.orderType}"
-            android:textSize="@dimen/_9ssp"
-            app:layout_constraintEnd_toStartOf="@id/gdlEnd"
-            app:layout_constraintStart_toEndOf="@id/tvOrderTypeL"
-            app:layout_constraintTop_toBottomOf="@id/tvNAVL"
-            tools:text="Purchase" />
-
-
-        <TextView
-            android:id="@+id/tvUnitsL"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_16"
-            android:text="@string/units_"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_9ssp"
-            app:layout_constraintEnd_toStartOf="@id/tvUnits"
-            app:layout_constraintStart_toEndOf="@id/gdlEnd"
-            app:layout_constraintTop_toBottomOf="@id/tvFolioL" />
-
-        <TextView
-            android:id="@+id/tvUnits"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_4"
-            android:layout_marginTop="@dimen/space_16"
-            android:textSize="@dimen/_9ssp"
-            android:text="@{data.units}"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="@dimen/space_8"
+            android:text="@{data.remarks}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:layout_constraintBaseline_toBaselineOf="@id/tvRemarkL"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/tvUnitsL"
-            app:layout_constraintTop_toBottomOf="@id/tvFolioL"
-            tools:text="15874" />
+            app:layout_constraintStart_toEndOf="@+id/tvRemarkL"
+            app:layout_constraintTop_toBottomOf="@id/mDivider"
+            tools:text="We have refunded the amount to your Bank for your failed order" />
+
 
     </android.support.constraint.ConstraintLayout>
 </layout>
