--- a/app/src/main/res/layout/row_unpaid_transactions.xml
+++ b/app/src/main/res/layout/row_unpaid_transactions.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="data"
-            type="com.tarrakki.module.transactions.Transactions" />
+            type="com.tarrakki.api.model.TransactionApiResponse.Transaction" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -15,43 +15,53 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/space_16"
         android:layout_marginEnd="@dimen/space_16"
-        android:background="@{data.selected ? @drawable/shape_cart_view_selected : @drawable/shape_cart_view}"
+        android:background="@drawable/shape_cart_view"
         android:elevation="@dimen/space_2"
-        android:padding="@dimen/space_8"
-        tools:background="@drawable/shape_cart_view">
+        android:padding="@dimen/space_8">
 
         <TextView
             android:id="@+id/tvName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:maxLines="2"
+            android:minLines="2"
             android:text="@{data.name}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/item_selected_color"
-            app:layout_constraintEnd_toStartOf="@id/tvAmount"
+            app:layout_constraintEnd_toStartOf="@id/barrier"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            tools:layout_constraintEnd_toStartOf="@id/tvAmount"
             tools:text="SBI Banking and Financial Services Growth Direct Plan" />
+
+        <android.support.constraint.Barrier
+            android:id="@+id/barrier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="start"
+            app:constraint_referenced_ids="tvAmount,tvDate" />
 
         <TextView
             android:id="@+id/tvAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="end"
-            android:minWidth="@dimen/_64sdp"
-            android:text="@string/dummy3"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:price="@{data.amount}"
+            tools:text="@string/dummy3" />
 
         <TextView
             android:id="@+id/tvDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Feb 13, 2018"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:text="@{data.created}"
+            android:textSize="@dimen/_10ssp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvAmount" />
+            app:layout_constraintTop_toBottomOf="@id/tvAmount"
+            tools:text="Feb 13, 2018" />
 
         <TextView
             android:id="@+id/tvTypeL"
@@ -70,10 +80,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_4"
             android:layout_marginTop="@dimen/space_16"
-            android:text="Lumpsum"
+            android:text="@{data.type}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toEndOf="@id/tvTypeL"
-            app:layout_constraintTop_toBottomOf="@id/tvName" />
+            app:layout_constraintTop_toBottomOf="@id/tvName"
+            tools:text="Lumpsum" />
 
         <android.support.constraint.Guideline
             android:id="@+id/gdlCenter"
@@ -99,10 +110,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_4"
             android:layout_marginTop="@dimen/space_16"
-            android:text="27.50"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:dprice="@{data.nav}"
             app:layout_constraintStart_toEndOf="@id/tvNAVL"
-            app:layout_constraintTop_toBottomOf="@id/tvName" />
+            app:layout_constraintTop_toBottomOf="@id/tvName"
+            tools:text="27.50" />
 
         <android.support.constraint.Guideline
             android:id="@+id/gdlEnd"
@@ -130,11 +142,12 @@
             android:layout_marginStart="@dimen/space_4"
             android:layout_marginTop="@dimen/space_16"
             android:gravity="end"
-            android:text="15874"
+            android:text="@{data.folioNumber}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tvFolioL"
-            app:layout_constraintTop_toBottomOf="@id/tvName" />
+            app:layout_constraintTop_toBottomOf="@id/tvName"
+            tools:text="15874" />
 
 
         <TextView
@@ -154,10 +167,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="@dimen/space_16"
-            android:text="#15874"
+            android:text="@{data.orderNumber}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintBaseline_toBaselineOf="@id/btnPayNow"
-            app:layout_constraintStart_toEndOf="@+id/tvOrderNoL" />
+            app:layout_constraintStart_toEndOf="@+id/tvOrderNoL"
+            tools:text="#15874" />
 
         <TextView
             android:id="@+id/btnPayNow"
