--- a/app/src/main/res/layout/row_upcoming_transactions.xml
+++ b/app/src/main/res/layout/row_upcoming_transactions.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="data"
-            type="com.tarrakki.module.transactions.Transactions" />
+            type="com.tarrakki.api.model.TransactionApiResponse.Transaction" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -24,33 +24,44 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:maxLines="2"
+            android:minLines="2"
             android:text="@{data.name}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/item_selected_color"
-            app:layout_constraintEnd_toStartOf="@id/tvAmount"
+            app:layout_constraintEnd_toStartOf="@id/barrier"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            tools:layout_constraintEnd_toStartOf="@id/tvAmount"
             tools:text="SBI Banking and Financial Services Growth Direct Plan" />
+
+        <android.support.constraint.Barrier
+            android:id="@+id/barrier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="start"
+            app:constraint_referenced_ids="tvAmount,tvDate" />
 
         <TextView
             android:id="@+id/tvAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="end"
-            android:minWidth="@dimen/_64sdp"
-            android:text="@string/dummy3"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:price="@{data.amount}"
+            tools:text="@string/dummy3" />
 
         <TextView
             android:id="@+id/tvDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Feb 13, 2018"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:text="@{data.created}"
+            android:textSize="@dimen/_10ssp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvAmount" />
+            app:layout_constraintTop_toBottomOf="@id/tvAmount"
+            tools:text="Feb 13, 2018" />
 
         <TextView
             android:id="@+id/tvTypeL"
@@ -69,10 +80,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_4"
             android:layout_marginTop="@dimen/space_16"
-            android:text="Lumpsum"
+            android:text="@{data.type}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toEndOf="@id/tvTypeL"
-            app:layout_constraintTop_toBottomOf="@id/tvName" />
+            app:layout_constraintTop_toBottomOf="@id/tvName"
+            tools:text="Lumpsum" />
 
         <android.support.constraint.Guideline
             android:id="@+id/gdlCenter"
@@ -98,11 +110,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_4"
             android:layout_marginTop="@dimen/space_16"
-            android:text="15874"
+            android:text="@{data.folioNumber}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tvFolioL"
-            app:layout_constraintTop_toBottomOf="@id/tvName" />
+            app:layout_constraintTop_toBottomOf="@id/tvName"
+            tools:text="15874" />
 
 
     </android.support.constraint.ConstraintLayout>
