1 Implemented In Progress Transaction Api. 2 Implemented Load more for In Progress Transaction Screen 3 Implemented Swipe to refresh for In Progress Transaction Screen 4 Implemented Completed Transaction Api. 5 Implemented Load more for Completed Transaction Screen 6 Implemented Swipe to refresh for Completed Transaction Screen 7 Implemented Upcoming Transaction Api. 8 Implemented Load more for Upcoming Transaction Screen 9 Implemented Swipe to refresh for Upcoming Transaction Screen

--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -206,7 +206,6 @@
                 android:elevation="@dimen/space_2"
                 android:orientation="vertical"
                 android:padding="8dp"
-                android:visibility="gone"
                 tools:visibility="visible">
 
                 <TextView
@@ -227,6 +226,15 @@
                     app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                     tools:itemCount="2"
                     tools:listitem="@layout/row_top_ten_holdings_list_item" />
+
+                <TextView
+                    android:id="@+id/tvDataNotFountTop10"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/no_data_found"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
 
             </LinearLayout>
 
