--- a/app/src/main/res/layout/row_completed_transactions.xml
+++ b/app/src/main/res/layout/row_completed_transactions.xml
@@ -6,6 +6,10 @@
     <data>
 
         <variable
+            name="statusVisibility"
+            type="int" />
+
+        <variable
             name="data"
             type="com.tarrakki.api.model.TransactionApiResponse.Transaction" />
     </data>
@@ -224,12 +228,58 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_4"
             android:layout_marginTop="@dimen/space_16"
-            android:textSize="@dimen/_9ssp"
             android:text="@{data.units}"
+            android:textSize="@dimen/_9ssp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tvUnitsL"
             app:layout_constraintTop_toBottomOf="@id/tvFolioL"
             tools:text="15874" />
+
+        <View
+            android:id="@+id/mDivider1"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="@dimen/space_16"
+            android:background="@color/lighter_gray"
+            android:visibility="@{statusVisibility}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvOrderNoL"
+            tools:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tvStateL"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_8"
+            android:layout_marginBottom="@dimen/space_16"
+            android:text="@string/status_"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/black"
+            android:visibility="@{statusVisibility}"
+            app:layout_constraintBaseline_toBaselineOf="@id/tvState"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/mDivider1"
+            tools:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tvState"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="@dimen/space_8"
+            android:text="@{data.stringRes}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@{data.textColorRes}"
+            android:visibility="@{statusVisibility}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tvStateL"
+            app:layout_constraintTop_toBottomOf="@id/mDivider1"
+            tools:text="@string/in_progress"
+            tools:textColor="@color/pdlg_color_green"
+            tools:visibility="gone" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
