--- a/app/src/main/res/layout/row_inprogress_transactions.xml
+++ b/app/src/main/res/layout/row_inprogress_transactions.xml
@@ -6,6 +6,10 @@
     <data>
 
         <variable
+            name="statusVisibility"
+            type="int" />
+
+        <variable
             name="data"
             type="com.tarrakki.api.model.TransactionApiResponse.Transaction" />
     </data>
@@ -217,6 +221,51 @@
             app:layout_constraintTop_toBottomOf="@id/tvNAVL"
             tools:text="Purchase" />
 
+        <View
+            android:id="@+id/mDivider1"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="@dimen/space_16"
+            android:background="@color/lighter_gray"
+            android:visibility="@{statusVisibility}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvOrderNo"
+            tools:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tvStateL"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_8"
+            android:layout_marginBottom="@dimen/space_16"
+            android:text="@string/status_"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/black"
+            android:visibility="@{statusVisibility}"
+            app:layout_constraintBaseline_toBaselineOf="@id/tvState"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/mDivider1"
+            tools:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tvState"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="@dimen/space_8"
+            android:text="@{data.stringRes}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@{data.textColorRes}"
+            android:visibility="@{statusVisibility}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tvStateL"
+            app:layout_constraintTop_toBottomOf="@id/mDivider1"
+            tools:text="@string/in_progress"
+            tools:textColor="@color/pdlg_color_green"
+            tools:visibility="gone" />
 
         <net.cachapa.expandablelayout.ExpandableLayout
             android:id="@+id/expStatus"
@@ -226,7 +275,7 @@
             app:el_duration="0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvOrderNo">
+            app:layout_constraintTop_toBottomOf="@id/mDivider1">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvTransactionStatus"
