--- a/app/src/main/res/layout/fragment_add_bank_account.xml
+++ b/app/src/main/res/layout/fragment_add_bank_account.xml
@@ -241,6 +241,7 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/black"
                 android:textColorHint="@color/darker_gray"
+                app:isIFSCCode="@{true}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintStart_toEndOf="@id/tvAccountType"
