--- a/app/src/main/res/layout/row_failed_transactions.xml
+++ b/app/src/main/res/layout/row_failed_transactions.xml
@@ -8,6 +8,11 @@
         <variable
             name="data"
             type="com.tarrakki.api.model.TransactionApiResponse.Transaction" />
+
+        <variable
+            name="statusVisibility"
+            type="int" />
+
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -15,10 +20,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/space_16"
         android:layout_marginEnd="@dimen/space_16"
-        android:background="@{data.selected ? @drawable/shape_cart_view_selected : @drawable/shape_cart_view}"
+        android:background="@drawable/shape_cart_view"
         android:elevation="@dimen/space_2"
-        android:padding="@dimen/space_8"
-        tools:background="@drawable/shape_cart_view">
+        android:padding="@dimen/space_8">
 
         <TextView
             android:id="@+id/tvName"
@@ -164,11 +168,10 @@
             android:id="@+id/tvRemarkL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_8"
-            android:layout_marginBottom="@dimen/space_16"
             android:text="@string/remarks_"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/black"
+            app:layout_constraintBaseline_toBaselineOf="@+id/tvRemark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mDivider" />
@@ -179,14 +182,59 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="@dimen/space_8"
+            android:maxLines="2"
             android:text="@{data.remarks}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintBaseline_toBaselineOf="@id/tvRemarkL"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tvRemarkL"
             app:layout_constraintTop_toBottomOf="@id/mDivider"
             tools:text="We have refunded the amount to your Bank for your failed order" />
+
+        <View
+            android:id="@+id/mDivider1"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="@dimen/space_16"
+            android:background="@color/lighter_gray"
+            android:visibility="@{statusVisibility}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvRemark"
+            tools:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tvStateL"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_8"
+            android:layout_marginBottom="@dimen/space_16"
+            android:text="@string/status_"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/black"
+            android:visibility="@{statusVisibility}"
+            app:layout_constraintBaseline_toBaselineOf="@id/tvState"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/mDivider1"
+            tools:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tvState"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="@dimen/space_8"
+            android:text="@{data.stringRes}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@{data.textColorRes}"
+            android:visibility="@{statusVisibility}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tvStateL"
+            app:layout_constraintTop_toBottomOf="@id/mDivider1"
+            tools:text="@string/in_progress"
+            tools:textColor="@color/pdlg_color_green"
+            tools:visibility="gone" />
 
 
     </android.support.constraint.ConstraintLayout>
