--- a/app/src/main/res/layout/dialog_stop_transaction.xml
+++ b/app/src/main/res/layout/dialog_stop_transaction.xml
@@ -9,12 +9,12 @@
             type="String" />
 
         <variable
-            name="investmentAmount"
+            name="startDate"
             type="String" />
 
         <variable
             name="amount"
-            type="String" />
+            type="java.math.BigInteger" />
 
     </data>
 
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_semibold"
-            android:text="@string/redeem"
+            android:text="@string/stop_sip"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -72,7 +72,7 @@
             android:paddingTop="@dimen/space_8"
             android:paddingEnd="@dimen/default_space"
             android:paddingBottom="@dimen/space_8"
-            android:text="@={folio}"
+            android:text="@{folio}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/black"
             android:textColorHint="@color/darker_gray"
@@ -82,50 +82,42 @@
             app:layout_constraintTop_toBottomOf="@id/tvChooseFolio" />
 
         <TextView
-            android:id="@+id/tvLumpsum"
+            android:id="@+id/tvSelectStartDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_space"
-            android:text="Total Invested Amount"
+            android:text="@string/select_startdate"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edtChooseFolio" />
 
-        <EditText
-            android:id="@+id/edtTotalInvestedAmount"
+        <TextView
+            android:id="@+id/edtStartDate"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="36dp"
             android:layout_marginTop="@dimen/space_4"
-            android:background="@drawable/shape_edt_disable_gray_round"
-            android:focusable="false"
+            android:layout_marginEnd="@dimen/space_4"
+            android:background="@drawable/shape_edt_gray_round"
+            android:completionThreshold="1"
+            android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
+            android:hint="@string/select_startdate"
             android:maxLines="1"
-            android:nextFocusForward="@+id/edtSIPAmount"
-            android:paddingStart="@dimen/space_30"
+            android:paddingStart="@dimen/default_space"
             android:paddingTop="@dimen/space_8"
             android:paddingEnd="@dimen/default_space"
             android:paddingBottom="@dimen/space_8"
-            android:text="@={investmentAmount}"
+            android:text="@{startDate}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textColor="@color/darker_gray"
+            android:textColor="@color/black"
             android:textColorHint="@color/darker_gray"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/edtLName"
+            app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvLumpsum" />
+            app:layout_constraintTop_toBottomOf="@id/tvSelectStartDate" />
 
         <TextView
-            android:id="@+id/tvRSInvestedAmount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/default_space"
-            android:text="@string/rs_symbol"
-            android:textColor="@color/darker_gray"
-            app:layout_constraintBottom_toBottomOf="@id/edtTotalInvestedAmount"
-            app:layout_constraintStart_toStartOf="@id/edtTotalInvestedAmount"
-            app:layout_constraintTop_toTopOf="@id/edtTotalInvestedAmount" />
-
-        <TextView
-            android:id="@+id/tvAmountL"
+            android:id="@+id/tvAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_space"
@@ -133,74 +125,45 @@
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edtTotalInvestedAmount" />
-
-        <CheckBox
-            android:id="@+id/chkAmount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:gravity="center_vertical"
-            android:button="@drawable/checkbox_redeem_folio"
-            android:text="Full Amount"
-            android:layout_marginTop="@dimen/space_8"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
-            android:textColor="@color/darker_gray"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvAmountL" />
+            app:layout_constraintTop_toBottomOf="@id/edtStartDate" />
 
         <TextView
-            android:id="@+id/tvRSAmount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/default_space"
-            android:text="@string/rs_symbol"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@id/edtAmount"
-            app:layout_constraintStart_toStartOf="@id/edtAmount"
-            app:layout_constraintTop_toTopOf="@id/edtAmount" />
-
-        <EditText
             android:id="@+id/edtAmount"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:layout_marginTop="@dimen/space_4"
+            android:layout_marginEnd="@dimen/space_4"
             android:background="@drawable/shape_edt_gray_round"
-            android:hint="@string/enter_amount"
-            android:imeOptions="actionDone"
-            android:inputType="number"
+            android:hint="@string/select_end_date"
             android:maxLines="1"
-            android:paddingStart="@dimen/space_30"
+            android:paddingStart="@dimen/default_space"
             android:paddingTop="@dimen/space_8"
             android:paddingEnd="@dimen/default_space"
             android:paddingBottom="@dimen/space_8"
-            android:text="@={amount}"
+            price="@{amount}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/black"
             android:textColorHint="@color/darker_gray"
-            app:layout_constraintBottom_toBottomOf="@+id/chkAmount"
-            app:layout_constraintEnd_toStartOf="@+id/chkAmount"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvAmountL" />
+            app:layout_constraintTop_toBottomOf="@id/tvAmount" />
 
         <Button
+            android:layout_marginTop="@dimen/space_16"
             android:id="@+id/btnInvest"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/space_32"
-            android:layout_marginTop="@dimen/default_space"
             android:layout_marginBottom="@dimen/space_4"
             android:background="@drawable/shape_btn_idle_bg"
             android:fontFamily="@font/lato_semibold"
             android:paddingStart="24dp"
             android:paddingEnd="24dp"
-            android:text="@string/redeem"
+            android:text="@string/stop"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edtAmount"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edtAmount" />
+            app:layout_constraintStart_toStartOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
