--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View"/>
+
         <variable
             name="vm"
             type="com.tarrakki.module.cart.CartVM" />
@@ -40,11 +42,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lato_semibold"
-                    android:text="@string/great_job"
+                    android:text="@{vm.isEmptyCart?@string/no_funds_cart:@string/great_job}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@android:color/black" />
 
                 <TextView
+                    android:visibility="@{vm.isEmptyCart?View.GONE:View.VISIBLE}"
                     android:id="@+id/tvWhyTarrakkiiReason"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -62,7 +65,7 @@
                     android:fontFamily="@font/lato_bold"
                     android:paddingStart="@dimen/space_16"
                     android:paddingEnd="@dimen/space_16"
-                    android:text="@string/add_funds"
+                    android:text="@{vm.isEmptyCart?@string/add_funds:@string/edit_funds}"
                     android:layout_marginBottom="@dimen/space_1"
                     android:textAllCaps="true"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
@@ -72,7 +75,7 @@
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/lyt_orders"
-                android:visibility="gone"
+                android:visibility="@{vm.isEmptyCart?View.GONE:View.VISIBLE}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_space"
