--- a/app/src/main/res/layout/fragment_direct_investment.xml
+++ b/app/src/main/res/layout/fragment_direct_investment.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View"/>
+
         <variable
             name="vm"
             type="com.tarrakki.module.portfolio.PortfolioVM" />
@@ -15,14 +17,27 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvDInvests"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:overScrollMode="never"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            tools:context=".module.portfolio.fragments.DirectInvestmentFragment"
-            tools:listitem="@layout/row_direct_investment_list_item" />
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvDInvests"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="@{vm.isDirectEmpty==true?View.GONE:View.VISIBLE}"
+                android:overScrollMode="never"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+
+            <TextView
+                android:visibility="@{vm.isDirectEmpty==true?View.VISIBLE:View.GONE}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:text="@string/data_not_found"
+                android:layout_width="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 </layout>
