--- a/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
+++ b/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="android.view.View"/>
 
         <variable
             name="investment"
@@ -196,6 +197,7 @@
                 android:gravity="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:text="@string/stop"
+                android:visibility="@{investment.isSIP?View.VISIBLE:View.GONE}"
                 android:textColor="@color/colorAccent"/>
 
         </LinearLayout>
