--- a/app/src/main/res/layout/row_transaction_confirm.xml
+++ b/app/src/main/res/layout/row_transaction_confirm.xml
@@ -49,18 +49,18 @@
 
             <TextView
                 android:id="@+id/tvAmount"
+                price="@{widget.amount}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toStartOf="@id/imgArrow"
-                android:layout_marginEnd="@dimen/space_12"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/imgArrow"
-                price="@{widget.amount}"
-                tools:text="545454"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toStartOf="@id/imgArrow"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="545454" />
 
             <ImageView
+                android:paddingStart="12dp"
                 android:id="@+id/imgArrow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
