--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -27,13 +27,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/btnClose"
                 android:layout_gravity="end"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
                 android:padding="@dimen/space_8"
+                android:clickable="true"
+                android:focusable="true"
                 android:src="@drawable/ic_close_black_24dp" />
 
         </LinearLayout>
