--- a/app/src/main/res/layout/page_investment_options_item.xml
+++ b/app/src/main/res/layout/page_investment_options_item.xml
@@ -161,7 +161,7 @@
             android:text="@{invest.categoryDesctiption}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintTop_toBottomOf="@id/tvSortDescription"
-            app:layout_constraintBottom_toTopOf="@+id/btnSelect"
+            tools:layout_editor_absoluteX="8dp"
             tools:text="An aggressive investment strategy involves allocating more money to direct equity, and less money to bonds." />
 
         <Button
@@ -175,7 +175,9 @@
             android:text="@string/select"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
+            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
+            app:layout_constraintVertical_bias="0.0"
+            tools:layout_editor_absoluteX="8dp" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
